🏗️ massive consolidation and refactor 🔁 🛠️ navigation fix for children, filters, … 🗺️ 🛠️ semantic sizing system ↕️ 🛠️ futureproofed icon mechanism 👁️ 🛠️ more conistent hook system, derived panel configs, …  🪝 🔨 unconsolidated storybook, … 📕
