# openapi/schema.json
@@ -431,10 +431,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name",
-          "email"
-        ],
+        "required": ["name", "email"],
         "title": "AuthorInput",
         "description": "\ud83d\udc64 The input for an author."
       },
@@ -454,10 +451,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name",
-          "email"
-        ],
+        "required": ["name", "email"],
         "title": "Author",
         "description": "\ud83d\udcd1 The output of an author."
       },
@@ -486,10 +480,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "description",
-          "types"
-        ],
+        "required": ["description", "types"],
         "title": "Body_predict_design_assistant_predictDesign_get"
       },
       "ConnectionContext-Input": {
@@ -565,10 +556,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "connected",
-          "connecting"
-        ],
+        "required": ["connected", "connecting"],
         "title": "ConnectionContext",
         "description": "\ud83d\udd87\ufe0f A bidirectional connection between two pieces of a design."
       },
@@ -645,10 +633,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "connected",
-          "connecting"
-        ],
+        "required": ["connected", "connecting"],
         "title": "ConnectionContext",
         "description": "\ud83d\udd87\ufe0f A bidirectional connection between two pieces of a design."
       },
@@ -725,10 +710,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "connected",
-          "connecting"
-        ],
+        "required": ["connected", "connecting"],
         "title": "ConnectionInput",
         "description": "\ud83d\udd87\ufe0f A bidirectional connection between two pieces of a design."
       },
@@ -805,10 +787,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "connected",
-          "connecting"
-        ],
+        "required": ["connected", "connecting"],
         "title": "Connection",
         "description": "\ud83d\udd87\ufe0f A bidirectional connection between two pieces of a design."
       },
@@ -885,10 +864,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "connected",
-          "connecting"
-        ],
+        "required": ["connected", "connecting"],
         "title": "ConnectionPrediction",
         "description": "\ud83d\udd87\ufe0f A bidirectional connection between two pieces of a design."
       },
@@ -961,9 +937,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "DesignContext",
         "description": "\ud83c\udfd9\ufe0f A design is a collection of pieces that are connected."
       },
@@ -1036,9 +1010,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "DesignContext",
         "description": "\ud83c\udfd9\ufe0f A design is a collection of pieces that are connected."
       },
@@ -1132,9 +1104,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "DesignInput",
         "description": "\ud83c\udfd9\ufe0f A design is a collection of pieces that are connected."
       },
@@ -1240,9 +1210,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "Design",
         "description": "\ud83c\udfd9\ufe0f A design is a collection of pieces that are connected."
       },
@@ -1288,10 +1256,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y"
-        ],
+        "required": ["x", "y"],
         "title": "CoordContext",
         "description": "\ud83d\udcfa A 2d-point (xy) of integers in screen coordinate system."
       },
@@ -1309,10 +1274,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y"
-        ],
+        "required": ["x", "y"],
         "title": "CoordInput",
         "description": "\ud83d\udcfa A 2d-point (xy) of integers in screen coordinate system."
       },
@@ -1330,10 +1292,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y"
-        ],
+        "required": ["x", "y"],
         "title": "Coord",
         "description": "\ud83d\udcfa A 2d-point (xy) of integers in screen coordinate system."
       },
@@ -1391,9 +1350,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "KitContext",
         "description": "\ud83d\uddc3\ufe0f A kit is a collection of types and designs."
       },
@@ -1487,9 +1444,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "KitInput",
         "description": "\u2198\ufe0f The input for a kit."
       },
@@ -1601,10 +1556,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "uri",
-          "name"
-        ],
+        "required": ["uri", "name"],
         "title": "Kit",
         "description": "\ud83d\uddc3\ufe0f A kit is a collection of types and designs."
       },
@@ -1622,10 +1574,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "longitude",
-          "latitude"
-        ],
+        "required": ["longitude", "latitude"],
         "title": "LocationContext",
         "description": "\ud83d\udccd The context of a location."
       },
@@ -1643,10 +1592,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "longitude",
-          "latitude"
-        ],
+        "required": ["longitude", "latitude"],
         "title": "LocationInput",
         "description": "\ud83d\udccd The input for a location."
       },
@@ -1664,10 +1610,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "longitude",
-          "latitude"
-        ],
+        "required": ["longitude", "latitude"],
         "title": "Location",
         "description": "\ud83d\udccd The output of a location."
       },
@@ -1723,9 +1666,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "type"
-        ],
+        "required": ["type"],
         "title": "PieceContext",
         "description": "\u2b55 A piece is a 3d-instance of a type in a design."
       },
@@ -1781,9 +1722,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "type"
-        ],
+        "required": ["type"],
         "title": "PieceContext",
         "description": "\u2b55 A piece is a 3d-instance of a type in a design."
       },
@@ -1853,9 +1792,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "type"
-        ],
+        "required": ["type"],
         "title": "PieceInput",
         "description": "\u2b55 A piece is a 3d-instance of a type in a design."
       },
@@ -1911,9 +1848,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "type"
-        ],
+        "required": ["type"],
         "title": "Piece",
         "description": "\u2b55 A piece is a 3d-instance of a type in a design."
       },
@@ -1939,9 +1874,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "type"
-        ],
+        "required": ["type"],
         "title": "PiecePrediction",
         "description": "\u2b55 A piece is a 3d-instance of a type in a design."
       },
@@ -1961,11 +1894,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "origin",
-          "xAxis",
-          "yAxis"
-        ],
+        "required": ["origin", "xAxis", "yAxis"],
         "title": "PlaneContext",
         "description": "\u25f3 A plane is an origin (point) and an orientation (x-axis and y-axis)."
       },
@@ -1985,11 +1914,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "origin",
-          "xAxis",
-          "yAxis"
-        ],
+        "required": ["origin", "xAxis", "yAxis"],
         "title": "PlaneInput",
         "description": "\u25f3 A plane is an origin (point) and an orientation (x-axis and y-axis)."
       },
@@ -2009,11 +1934,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "origin",
-          "xAxis",
-          "yAxis"
-        ],
+        "required": ["origin", "xAxis", "yAxis"],
         "title": "Plane",
         "description": "\u25f3 A plane is an origin (point) and an orientation (x-axis and y-axis)."
       },
@@ -2036,11 +1957,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y",
-          "z"
-        ],
+        "required": ["x", "y", "z"],
         "title": "Point",
         "description": "\u2716\ufe0f A 3d-point (xyz) of floating point numbers."
       },
@@ -2063,11 +1980,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y",
-          "z"
-        ],
+        "required": ["x", "y", "z"],
         "title": "PointContext",
         "description": "\u2716\ufe0f A 3d-point (xyz) of floating point numbers."
       },
@@ -2090,11 +2003,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y",
-          "z"
-        ],
+        "required": ["x", "y", "z"],
         "title": "PointInput",
         "description": "\u2716\ufe0f A 3d-point (xyz) of floating point numbers."
       },
@@ -2159,10 +2068,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "point",
-          "direction"
-        ],
+        "required": ["point", "direction"],
         "title": "PortContext",
         "description": "\ud83d\udd0c A port is a connection point (with a direction) of a type."
       },
@@ -2241,10 +2147,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "point",
-          "direction"
-        ],
+        "required": ["point", "direction"],
         "title": "PortInput",
         "description": "\ud83d\udd0c A port is a connection point (with a direction) of a type."
       },
@@ -2309,10 +2212,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "point",
-          "direction"
-        ],
+        "required": ["point", "direction"],
         "title": "Port",
         "description": "\ud83d\udd0c A port is a connection point (with a direction) of a type."
       },
@@ -2340,9 +2240,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "AttributeContext",
         "description": "\ud83d\udccf A attribute is a key value pair with an an optional definition."
       },
@@ -2377,9 +2275,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "AttributeInput",
         "description": "\ud83d\udccf A attribute is a key value pair with an an optional definition."
       },
@@ -2414,9 +2310,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "Attribute",
         "description": "\ud83d\udccf A attribute is a key value pair with an an optional definition."
       },
@@ -2453,9 +2347,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "url"
-        ],
+        "required": ["url"],
         "title": "RepresentationInput",
         "description": "\ud83d\udcbe A representation is a link to a resource that describes a type for a certain level of detail and tags."
       },
@@ -2492,9 +2384,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "url"
-        ],
+        "required": ["url"],
         "title": "Representation",
         "description": "\ud83d\udcbe A representation is a link to a resource that describes a type for a certain level of detail and tags."
       },
@@ -2508,10 +2398,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "piece",
-          "port"
-        ],
+        "required": ["piece", "port"],
         "title": "SideContext",
         "description": "\ud83e\uddf1 A side of a piece in a connection."
       },
@@ -2525,10 +2412,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "piece",
-          "port"
-        ],
+        "required": ["piece", "port"],
         "title": "SideInput",
         "description": "\ud83e\uddf1 A side of a piece in a connection."
       },
@@ -2542,10 +2426,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "piece",
-          "port"
-        ],
+        "required": ["piece", "port"],
         "title": "Side",
         "description": "\ud83e\uddf1 A side of a piece in a connection."
       },
@@ -2559,10 +2440,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "piece",
-          "port"
-        ],
+        "required": ["piece", "port"],
         "title": "SidePrediction",
         "description": "\ud83e\uddf1 A side of a piece in a connection."
       },
@@ -2633,9 +2511,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "TypeContext",
         "description": "\ud83e\udde9 A type is a reusable element that can be connected with other types over ports."
       },
@@ -2706,9 +2582,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "TypeContext",
         "description": "\ud83e\udde9 A type is a reusable element that can be connected with other types over ports."
       },
@@ -2729,9 +2603,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "TypeId",
         "description": "\ud83e\udeaa The props to identify the type."
       },
@@ -2830,9 +2702,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "TypeInput",
         "description": "\ud83e\udde9 A type is a reusable element that can be connected with other types over ports."
       },
@@ -2943,9 +2813,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "name"
-        ],
+        "required": ["name"],
         "title": "Type",
         "description": "\ud83e\udde9 A type is a reusable element that can be connected with other types over ports."
       },
@@ -2975,11 +2843,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "loc",
-          "msg",
-          "type"
-        ],
+        "required": ["loc", "msg", "type"],
         "title": "ValidationError"
       },
       "Vector": {
@@ -3001,11 +2865,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y",
-          "z"
-        ],
+        "required": ["x", "y", "z"],
         "title": "Vector",
         "description": "\u27a1\ufe0f A 3d-vector (xyz) of floating point numbers."
       },
@@ -3028,11 +2888,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y",
-          "z"
-        ],
+        "required": ["x", "y", "z"],
         "title": "VectorContext",
         "description": "\u27a1\ufe0f A 3d-vector (xyz) of floating point numbers."
       },
@@ -3055,11 +2911,7 @@
           }
         },
         "type": "object",
-        "required": [
-          "x",
-          "y",
-          "z"
-        ],
+        "required": ["x", "y", "z"],
         "title": "VectorInput",
         "description": "\u27a1\ufe0f A 3d-vector (xyz) of floating point numbers."
       }
